# TrainingPlanner

./: CMakeLists.txt  app_resources.qrc  dbexercisesmodel.h  dbmesocalendarmodel.h  dbmesocyclesmodel.h  dbmesosplitmodel.h  dbtrainingdaymodel.h  exerciseslist.lst  exerciseslist.qrc  graph.h  images.qrc  make_tr.sh  sounds.qrc  tplistmodel.h  trainingplanner.pro  translations.qrc
android/: .AndroidManifest.xml.kate-swp  AndroidManifest.xml  build.gradle  gradle.properties  local.properties
cxx/: TPEventFilter.h  backupclass.cpp  backupclass.h  calendar_methods.h  dbcalendarmodel.cpp  dbcalendarmodel.h  dbexerciseslist.cpp  dbexerciseslist.h  dbexerciseslistmodel.cpp  dbexerciseslistmodel.h  dbexerciseslisttable.cpp  dbexerciseslisttable.h  dbexercisesmodel.cpp  dbexercisesmodel.h  dbexercisestable.cpp  dbexercisestable.h  dbinterface.cpp  dbinterface.h  dbmanager.cpp  dbmanager.h  dbmesocalendarmanager.cpp  dbmesocalendarmanager.h  dbmesocalendarmodel.cpp  dbmesocalendarmodel.h  dbmesocalendartable.cpp  dbmesocalendartable.h  dbmesocyclesmodel.cpp  dbmesocyclesmodel.h  dbmesocyclestable.cpp  dbmesocyclestable.h  dbmesocylestable.cpp  dbmesocylestable.h  dbmesosplitmodel.cpp  dbmesosplitmodel.h  dbmesosplittable.cpp  dbmesosplittable.h  dbmodelinterface.cpp  dbmodelinterface.h  dbtrainingdaymodel.cpp  dbtrainingdaymodel.h  (+94 more)
cxx/exercises_helper/: setpredictionvalues.cpp  setpredictionvalues.h
cxx/online_services/: onlineuserinfo.cpp  onlineuserinfo.h  scan_network.h  tcpserver.cpp  tcpserver.h  tpchat.cpp  tpchat.h  tpchatdb.cpp  tpchatdb.h  tpmessage.cpp  tpmessage.h  tpmessagesmanager.cpp  tpmessagesmanager.h  tponlinemessages.cpp  tponlinemessages.h  tponlineservices.cpp  tponlineservices.h  websocketserver.cpp  websocketserver.h
cxx/statistics/: tpstatistics.cpp  tpstatistics.h
cxx/tpkeychain/: androidkeystore.cpp  androidkeystore_p.h  keychain.cpp  keychain.h  keychain_android.cpp  keychain_p.h  keychain_unix.cpp  libsecret.cpp  libsecret_p.h  plaintextstore.cpp  tpkeychain.cpp  tpkeychain.h
cxx/weather/: openmeteobackend.cpp  openmeteobackend.h  openweathermapbackend.cpp  openweathermapbackend.h  providerbackend.h  weatherapibackend.cpp  weatherapibackend.h  weatherinfo.cpp  weatherinfo.h
extras/: AndroidManifest.xml  exercises_en_EN.lst  exercises_pt_BR.lst  exerciseslist.lst  tp_cloc.sh  userdata.txt
images/: app_logo.kra  prev.png.kra
java/: NotificationClient.java  QSharePathResolver.java  QShareUtils.java  TPActivity.java  TPBroadcastReceiver.java  TPService.java  timer.java
qml/: AppGlobals.qml  AppSettings.qml  BackupPage.qml  ButtonFlat.qml  ButtonIconActive.qml  CalendarDialog.qml  Database.qml  DatePicker.qml  DevSettingsPage.qml  DigitalClock.qml  ExerciseEntry.qml  ExerciseNameField.qml  ExercisesDatabase.qml  ExercisesListView.qml  ExercisesPlan.qml  ExercisesPlanner.qml  FirstTimeHomePageTip.qml  FloatingButton.qml  FontSizePage.qml  GraphicsViewer.qml  HomePage.qml  IconActive.qml  ImageViewer.qml  ImportMessageBox.qml  LanguageSettingsPage.qml  Main.qml  MainMenu.qml  MealsDayInfo.qml  MesoContent.qml  MesoCycle.qml  MesoSplitPlanner.qml  NavBar.qml  OpenEndedPlan.qml  PageScrollButtons.qml  RepsAndWeightRow.qml  SetInputField.qml  SetNotesField.qml  SetTypeCluster.qml  SetTypeDrop.qml  SetTypeGiant.qml  (+34 more)
qml/Dialogs/: CMakeLists.txt  CalendarDialog.qml  DatePicker.qml  FirstTimeDialog.qml  ImportDialog.qml  MainMenu.qml  MuscularGroupPicker.qml  NavBar.qml  OnlineMessages.qml  PasswordDialog.qml  SelectMesoForImport.qml  SendFileToDialog.qml  TPFileDialog.qml  TimePicker.qml  TimerDialog.qml
qml/Exercises/: CMakeLists.txt  ExerciseNameField.qml  ExercisesListDelegate.qml  ExercisesListView.qml  PageScrollButtons.qml  SetInputField.qml  SetNotesField.qml  SimpleExercisesListPanel.qml  WorkoutOrSplitExercisesList.qml
qml/ExercisesAndSets/: ExerciseEntry.qml  ExerciseNameField.qml  ExercisesListView.qml  PageScrollButtons.qml  RepsAndWeightRow.qml  SetInputField.qml  SetNotesField.qml  SetTypeDrop.qml  SetTypeGiant.qml  SetTypeRegular.qml  SimpleExercisesListPanel.qml  WorkoutExercisesList.qml  WorkoutOrSplitExercisesList.qml
qml/Pages/: .qmlls.ini  AllWorkouts.qml  BackupPage.qml  CMakeLists.txt  CliensOrCoachesPage.qml  ClientsOrCoachesPage.qml  ClientsPage.qml  CoachesPage.qml  ConfigurationPage.qml  ExercisesDatabase.qml  ExercisesListPage.qml  ExercisesPage.qml  ExercisesPlanner.qml  HomePage.qml  MesoCalendar.qml  MesoCalendarPage.qml  MesoContent.qml  MesoCycle.qml  MesoSplitPlanner.qml  MesoSplitSetup.qml  MesocyclePage.qml  OpenEndedPlan.qml  SettingsPage.qml  StatisticsPage.qml  TPPage.qml  TrainingDayInfo.qml  TrainingDayPage.qml  UserPage.qml  WeatherPage.qml  WorkoutPage.qml
qml/TPWidgets/: TPBackRec.qml  TPBalloonTip.qml  TPButton.qml  TPButtonGroup.qml  TPButtonImage.qml  TPCheckBox.qml  TPClientsList.qml  TPCoachesAndClientsList.qml  TPColorRectangle.qml  TPComboBox.qml  TPComplexDialog.qml  TPDatePicker.qml  TPDigitalClock.qml  TPFileViewer.qml  TPFloatingButton.qml  TPFloatingControl.qml  TPFloatingMenuBar.qml  TPGroupBox.qml  TPImageViewer.qml  TPImportDialog.qml  TPImportMessageBox.qml  TPLabel.qml  TPListView.qml  TPMouseArea.qml  TPMovablePopup.qml  TPMultiLineEdit.qml  TPPassword.qml  TPPasswordInput.qml  TPPhoneNumberInput.qml  TPPopup.qml  TPRadioButton.qml  TPRadioButtonOrCheckBox.qml  TPRoundButton.qml  TPSaveDialog.qml  TPScrollView.qml  TPTabButton.qml  TPTextInput.qml  TPToolBar.qml  TPVideoPlayer.qml
qml/User/: AllUsers.qml  AvatarsPopup.qml  CMakeLists.txt  ChatWindow.qml  TPCoachesAndClientsList.qml  UserChangePassword.qml  UserCoach.qml  UserCoachRequest.qml  UserContact.qml  UserExistingFromNet.qml  UserLanguage.qml  UserPersonalData.qml  (+3 more)
signedkey/: android_release.keystore
translations/: TrainingPlanner_de_DE.ts  TrainingPlanner_pt_BR.ts  tplanner.de_DE.ts  tplanner.pt_BR.qm  tplanner.pt_BR.ts
web-server/: default  function_library.sh  init_script.sh  nginx.conf  php.ini  return_codes.h  runcmds.sh  tpserver.conf  uri_parser.php  url_parser.php  user.fields  usersdb.sh  working-url_parser.php
(+64 files in other folders)
